syntax = "proto3";

option csharp_namespace = "ChatServer.Chat";

// send
message SPingPacket {

}

// receive
message CPongPacket {

}